--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0"
     implementation 'com.github.kittinunf.fuel:fuel:2.2.1'
     implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.tbuonomo.andrui:viewpagerdotsindicator:4.1.2'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
