--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation 'com.github.kittinunf.fuel:fuel:2.2.1'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.tbuonomo.andrui:viewpagerdotsindicator:4.1.2'
+    implementation "io.reactivex.rxjava2:rxkotlin:2.4.0"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
